--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="https://kit.fontawesome.com/1465a2f357.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
